Fixed a little bug with the homeicon which wouldn't work due to a too low z-index

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -91,6 +91,7 @@ html {
   margin: 5px;
   margin-top: 0;
   margin-left: 15px;
+  z-index: 1000;
 }
 
 
